# hajimu_engine_audio

./: CMakeLists.txt  Makefile  README.md  hajimu.json  release.sh
.github/workflows/: build.yml
examples/: hello_audio.jp
include/: eng_audio.h
src/: eng_audio.c  plugin.c
